Crypto and Swagger changed
